tests/ui/coverage-attr/name-value.stderr
error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:12:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:17:5
   |
LL |     #![coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #![coverage = "off"]
LL +     #![coverage(off)]
   |
LL -     #![coverage = "off"]
LL +     #![coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:21:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on structs
  --> $DIR/name-value.rs:21:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:26:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:29:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on associated consts
  --> $DIR/name-value.rs:29:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:35:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on traits
  --> $DIR/name-value.rs:35:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:39:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on associated consts
  --> $DIR/name-value.rs:39:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:44:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/name-value.rs:44:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:50:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:53:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on associated consts
  --> $DIR/name-value.rs:53:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:58:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[coverage = "off"]
LL +     #[coverage(off)]
   |
LL -     #[coverage = "off"]
LL +     #[coverage(on)]
   |

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/name-value.rs:58:5
   |
LL |     #[coverage = "off"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error[E0539]: malformed `coverage` attribute input
  --> $DIR/name-value.rs:64:1
   |
LL | #[coverage = "off"]
   | ^^^^^^^^^^^^^^^^^^^ this attribute is only valid with either `on` or `off` as an argument
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[coverage = "off"]
LL + #[coverage(off)]
   |
LL - #[coverage = "off"]
LL + #[coverage(on)]
   |

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0539`.
